--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,20 @@ dependencies = [
     "chex>=0.1.89",
     "einops>=0.8.1",
     "flax>=0.10.6",
+    "hydra-core>=1.3.2",
     "jax>=0.6.0",
     "jaxtyping>=0.3.2",
 ]
 
 [dependency-groups]
 dev = [
+    "accelerate>=1.6.0",
+    "datasets>=3.5.1",
+    "grain>=0.2.9",
+    "optax>=0.2.4",
+    "orbax>=0.1.9",
     "torch>=2.7.0",
+    "transformers>=4.51.3",
     "xlstm>=2.0.3",
 ]
 
