Optimized the block stack looping

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,11 @@ dev = [
     "xlstm>=2.0.3",
 ]
 
+
+[tool.setuptools]
+packages = ["xlstm_jax"]
+
+
 # [tool.pyright]
 # exclude = ["torch_xlstm/**"]
 # reportMissingImports = false
