--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["grain>=0.2.9", "optax>=0.2.4", "orbax>=0.1.9"]
+dev = ["grain>=0.2.9", "hydra-core>=1.3.2", "optax>=0.2.4", "orbax>=0.1.9"]
 
 
 [tool.setuptools]
