--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "xlstm_jax"
 version = "0.1.0"
-description = "Add your description here"
+description = "JAX/Flax port of the torch xLSTM package"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
