--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,27 @@
 [project]
-name = "xlstm_jax"
+name = "xlstm-jax"
 version = "0.1.0"
-authors = [{ name = "Abdoul Majid O. Thiombiano" }]
-description = "JAX/Flax port of the torch xLSTM package"
+description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "chex>=0.1.89",
+    "chex>=0.1.91",
+    "dacite>=1.9.2",
+    "datasets>=4.0.0",
     "einops>=0.8.1",
-    "flax>=0.10.6",
+    "flax>=0.11.2",
+    "grain>=0.2.12",
     "hydra-core>=1.3.2",
-    "jax>=0.6.0",
-    "jaxtyping>=0.3.2",
+    "jax>=0.7.1",
+    "matplotlib>=3.10.6",
+    "optax>=0.2.5",
+    "orbax>=0.1.9",
+    "tensorflow>=2.20.0",
+    "trackio>=0.3.2",
+    "transformers>=4.56.0",
 ]
 
 [dependency-groups]
-dev = ["grain>=0.2.9", "hydra-core>=1.3.2", "optax>=0.2.4", "orbax>=0.1.9"]
-
-
-[tool.setuptools]
-packages = ["xlstm_jax"]
+dev = [
+    "ipykernel>=6.30.1",
+]
