--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,22 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "chex>=0.1.91",
-    "dacite>=1.9.2",
-    "datasets>=4.0.0",
+    "datasets>=4.2.0",
     "einops>=0.8.1",
-    "flax>=0.11.2",
-    "grain>=0.2.12",
+    "flax>=0.12.0",
+    "grain>=0.2.13",
     "hydra-core>=1.3.2",
-    "jax>=0.7.1",
-    "matplotlib>=3.10.6",
-    "optax>=0.2.5",
+    "jax>=0.8.0",
+    "matplotlib>=3.10.7",
+    "optax>=0.2.6",
     "orbax>=0.1.9",
+    "tensorboard>=2.20.0",
     "tensorflow>=2.20.0",
-    "transformers>=4.56.0",
+    "transformers>=4.57.1",
 ]
 
 [dependency-groups]
 dev = [
-    "ipykernel>=6.30.1",
+    "ipykernel>=7.0.1",
+    "xprof>=2.20.7",
 ]
